# agent-leash

./: .gitignore  DEPLOY.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  com.steerd.relay.plist  steerd-relay.service
deploy/windows/: steerd-relay.bat
docs/: awesome-claude-code-submission.md
examples/: claude-settings-snippet.json
src/agent_leash/: __init__.py  config.py  hook.py  notify.py  relay.py
src/steerd/: __init__.py  config.py  hook.py  notify.py  relay.py
tests/: test_auth.py  test_hook.py  test_relay.py
