[project]
name = "agent-leash"
version = "0.1.0"
description = "Approve, reject, or correct your AI coding agent's actions from your phone — a remote-approval relay for Claude Code's PreToolUse hook."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kannan Dharmalingam" }]
keywords = ["claude-code", "mcp", "ai-agents", "hooks", "approval", "remote", "permissions", "developer-tools", "ntfy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/kannajune/agent-leash"
Issues = "https://github.com/kannajune/agent-leash/issues"

[project.scripts]
agent-leash-relay = "agent_leash.relay:main"
agent-leash-hook = "agent_leash.hook:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_leash"]
